--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!-- Write your HTML in this file -->
 <!DOCTYPE html>
 <html>
-<h1>Hello, World!</h1>
+  <header>
+    <h1>Hello, World!</h1>
+  </header>
 </html>
